--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,7 +13,8 @@ body {
 }
 
 input,
-select {
+select,
+textarea {
   @apply bg-base border-primary border-2 p-2 w-full;
 }
 
@@ -36,4 +37,12 @@ select {
 
 ul {
   list-style-type: circle;
+}
+
+.btn {
+  @apply bg-primary px-5 py-2 rounded-md;
+}
+
+.btn-danger {
+  @apply px-5 py-2 rounded-md bg-red-500;
 }
