--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,4 @@
-@import url("http://fonts.cdnfonts.com/css/circular-std");
+@import url("https://fonts.cdnfonts.com/css/circular-std");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
